[package]
name = "barnes_hut"
authors = ["Christopher Hecker"]
description = "Implementation of the Barnes-Hut algorithm"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
randomization = ["rand", "rand_distr"]
simd = ["simba"]
visualization = ["anyhow", "blue_engine"]

[dependencies]
anyhow = { version = "1.0.80", optional = true }
blue_engine = { version = "0.5.8", optional = true }
nalgebra = "0.32.4"
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
rayon = { version = "1.8.1", optional = true }
simba = { version = "0.8.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
nalgebra = { version = "0.32.4", features = ["rand"] }
barnes_hut = { path = ".", features = [
    "randomization",
    "rayon",
    "simd",
    "visualization",
] }

[profile.dev]
opt-level = 3

[[example]]
name = "gravity"

[[example]]
name = "visualize_random"
required-features = ["randomization", "visualization"]

[[example]]
name = "visualize_central_body"
required-features = ["randomization", "visualization"]

[[bench]]
name = "benchmark"
required-features = ["randomization", "rayon", "simd"]
harness = false
