[package]
name = "barnes_hut"
authors = ["Christopher Hecker"]
description = "Implementation of the Barnes-Hut algorithm"
license = "MIT"
version = "0.1.0"
edition = "2024"

[features]
randomization = ["rand", "rand_distr"]
simd = ["simba", "wide", "approx"]
visualization = ["color-eyre", "blue_engine"]

[dependencies]
approx = { version = "0.5.1", optional = true }
blue_engine = { version = "0.9.4", optional = true }
color-eyre = { version = "0.6.5", optional = true }
nalgebra = "0.34.1"
num-traits = "0.2.19"
rand = { version = "0.9.2", optional = true }
rand_distr = { version = "0.5.1", optional = true }
rayon = { version = "1.11.0", optional = true }
simba = { version = "0.9.1", optional = true }
wide = { version = "1.0.2", optional = true }

[dev-dependencies]
criterion = "0.8.0"
nalgebra = { version = "0.34.1", features = ["rand"] }
barnes_hut = { path = ".", features = [
    "randomization",
    "rayon",
    "simd",
    "visualization",
] }

[profile.dev]
opt-level = 3

[[example]]
name = "gravity"

[[example]]
name = "visualize_random"
required-features = ["randomization", "visualization"]

[[example]]
name = "visualize_central_body"
required-features = ["randomization", "visualization"]

[[bench]]
name = "benchmark"
required-features = ["randomization", "rayon", "simd"]
harness = false
